update stage scheme image hashing